<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <string name="app_name">WebImager</string>
    <string name="title_activity_main">WebImager</string>

    <string name="uri">URI</string>
    <string name="uri_hint">https://example.com/sample.html</string>

    <string name="go">Go</string>
    <string name="ok">OK</string>

    <string name="scanning">Scanning images…</string>
    <string name="downloading">Downloading…</string>
    <string name="success">Success!</string>

    <string name="error_scanning">Failed to scan images.</string>
    <string name="error_downloading">Failed to download images.</string>

    <string name="settings">Settings</string>
    <string name="general">General</string>
    <string name="create_sub_directory">Create sub directory</string>
    <string name="filter">Filter</string>
    <string name="use_filter">Use filter</string>
    <string name="min_image_width">Minimum image width (px)</string>
    <string name="min_image_height">Minimum image height (px)</string>
</resources>
